# Additional-plugins-for-Audacious-3.6

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  TODO  aclocal.m4  buildsys.mk  config.h.in  config.status  configure  configure.ac  extra.mk  libtool
macadd/: CMakeLists.txt
src/autocue/: .deps  Makefile  autocue.cc
src/filterpro/: Makefile  filterpro.cc
src/libape/: .deps  Makefile  mac.cc
